--- a/YarTransport/StationsCreator/GMap/StationsCreator.csproj
+++ b/YarTransport/StationsCreator/GMap/StationsCreator.csproj
@@ -88,7 +88,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="D:\Confirmit\YarTransport\YarTransport\TransportLibrary\TransportLibrary.csproj">
+    <ProjectReference Include="..\..\TransportLibrary\TransportLibrary.csproj">
       <Project>{aeefe54d-990d-424f-ad05-d36d6bf4b2d0}</Project>
       <Name>TransportLibrary</Name>
     </ProjectReference>
