--- a/YarTransport/SearchWaySystem/SearchWaySystem.csproj
+++ b/YarTransport/SearchWaySystem/SearchWaySystem.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FavoriteRoutes.cs" />
     <Compile Include="HtmlWorker.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
